<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:ignore="ExtraText">

   <androidx.cardview.widget.CardView
       android:id="@+id/cv_view"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       app:layout_constraintEnd_toEndOf="parent"
      android:layout_margin="16dp"
       app:cardCornerRadius="20dp"

       app:layout_constraintTop_toBottomOf="@+id/tv_tabcarros"
       app:layout_constraintStart_toStartOf="parent"

       app:cardBackgroundColor="@color/gray"
       tools:ignore="MissingConstraints">

      <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/cl_cardcontent"
          android:layout_width="match_parent"
          android:layout_height="match_parent">

         <ImageView
             android:id="@+id/iv_carro1"
             android:layout_width="312dp"
             android:layout_height="131dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="24dp"
             android:src="@drawable/aaaa"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"

             />


         <TextView
             android:id="@+id/tv_bateria"
             style="@style/TextAppearance.AppCompat.Body2"
             android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:text="@string/bateria"
             android:textColor="#000000"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_preco" />

         <TextView
             android:id="@+id/tv_vatz"
             style="@style/TextAppearance.AppCompat.Body2"
             android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:text="@string/_1000kv"
             android:textColor="#000000"
             app:layout_constraintStart_toEndOf="@+id/tv_bateria"
             app:layout_constraintTop_toBottomOf="@+id/tv_preco" />

         <TextView
             android:id="@+id/tv_preco"
             style="@style/TextAppearance.AppCompat.Body2"
             android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:text="@string/prec"
             android:textColor="#000000"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/iv_carro1"
             tools:ignore="DuplicateIds" />

         <TextView
             android:id="@+id/tv_preco_value"
             style="@style/TextAppearance.AppCompat.Body2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:text="R$120,00/D"
             android:textColor="#000000"
             app:layout_constraintStart_toEndOf="@+id/tv_preco"
             app:layout_constraintTop_toBottomOf="@+id/iv_carro1"
             tools:ignore="DuplicateIds" />

         <TextView
             android:id="@+id/tv_potencia"
             style="@style/TextAppearance.AppCompat.Body2"
             android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:text="@string/pot_ncia"
             android:textColor="#000000"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_bateria" />

         <TextView
             android:id="@+id/tv_cavalos"
             style="@style/TextAppearance.AppCompat.Body2"
             android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:text="@string/_670cv"
             android:textColor="#000000"
             app:layout_constraintStart_toEndOf="@+id/tv_potencia"
             app:layout_constraintTop_toBottomOf="@+id/tv_bateria" />

         <TextView
             android:id="@+id/tv_recarga"
             style="@style/TextAppearance.AppCompat.Body2"
             android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:text="recarga:"
             android:textColor="#020101"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_potencia" />

         <TextView
             android:id="@+id/tv_recarga_value"
             style="@style/TextAppearance.AppCompat.Body2"
             android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:text="27min"
             android:textColor="#000000"
             app:layout_constraintStart_toEndOf="@+id/tv_recarga"
             app:layout_constraintTop_toBottomOf="@+id/tv_potencia" />


      </androidx.constraintlayout.widget.ConstraintLayout>

       </androidx.cardview.widget.CardView>

   <TextView
       android:id="@+id/tv_Titulo"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_margin="16dp"
       android:text="@string/carros_eletricos"
       android:textColor="#000000"
       android:textSize="20sp"
       android:textStyle="bold"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <TextView
       android:id="@+id/tv_tabcarros"
       style="@style/TextAppearance.AppCompat.Body2"
       android:layout_width="60dp"
       android:layout_height="wrap_content"
       android:layout_margin="16dp"
       android:text="@string/carros"
       android:textColor="#000000"
       android:textStyle="bold"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/tv_Titulo" />

   <TextView
       android:id="@+id/tv_favoritos"
       style="@style/TextAppearance.AppCompat.Body2"
       android:layout_width="60dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="16dp"
       android:text="@string/favoritos"
       android:textColor="#000000"
       android:textStyle="bold"
       app:layout_constraintStart_toEndOf="@+id/tv_tabcarros"
       app:layout_constraintTop_toTopOf="@+id/tv_tabcarros" />


   <Button
       android:id="@+id/btn_entrar"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_margin="16dp"
       android:layout_marginStart="16dp"
       android:text="Calcular Autonomia"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="parent"


       tools:ignore="MissingConstraints" />

   <ListView
       android:id="@+id/lv_informacoes"
       android:layout_width="415dp"
       android:layout_height="317dp"
       app:layout_constraintBottom_toTopOf="@+id/btn_entrar"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/cv_view" />


</androidx.constraintlayout.widget.ConstraintLayout>

